crates/uitest/fixtures/name_resolution/method_not_found.snap
---
source: crates/uitest/tests/name_resolution.rs
expression: diags
input_file: fixtures/name_resolution/method_not_found.fe
---
error[2-0010]: no method named `new` found for struct `S`
  ┌─ method_not_found.fe:4:8
  │
4 │     S::new()
  │        ^^^ method not found in `S`
